# mysqldump-analyzer

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENCE.txt  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: semgrep.yml  tests.yml  trufflehog.yml
mysqldump_analyzer/: __init__.py  __main__.py  diff.py  entities.py  parser.py
stubs/: click.pyi
tests/: conftest.py  test_diff.py  test_entities.py  test_parser.py
tests/assets/: dump.sql  dump_another.sql  dump_other.sql  expected_diff.yaml  seed.sh
